data/derived/comb/progs/unify/prog4271.ml.out
Characters 26-37:
  let sampleExpr2=Times(Squa(VarX,VarY),Sine(Varx));;
                            ^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type expr
